# aoc_2024

./: .gitignore  Cargo.toml
src/: aoc.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_mitm.rs  day08.rs  day09.rs  day10.rs  day11.rs  day11_exploration.rs  day12.rs  day12_parallel.rs  day13.rs  day14.rs  day15.rs  day15_bits.rs  day16.rs  day16_old.rs  day16_parallel.rs  day17.rs  day18.rs  day18_bfs.rs  day18_weird_input.rs  main.rs  str_map.rs  util.rs  v.rs  y16_assembunny.rs  y16_day12.rs  y16_day23.rs  y16_day24.rs  y16_day25.rs
src/year16/: assembunny.rs  day12.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/year24/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_mitm.rs  day08.rs  day09.rs  day10.rs  day11.rs  day11_exploration.rs  day12.rs  day12_parallel.rs  day13.rs  day14.rs  day15.rs  day15_bits.rs  day16.rs  day16_old.rs  day17.rs  day18.rs  day18_bfs.rs  day18_weird_input.rs  day19.rs  day20.rs  day20_fw.rs  day21.rs  day21_regular.rs  day22.rs  day22_quickjump.rs  day23.rs  day23_bron.rs  day23_weird_input.rs  day24.rs  day24_.rs  day24_topo.rs  day25.rs  gf2_mod.rs  (+1 more)
