[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9",features = ["cookies"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
itertools = "0.13.0"
counter = "0.6"
dotenv = "0.15.0"
cached = { version = "0.54.0",features = ["async","proc_macro","disk_store"] }
thiserror = "2.0.3"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
ndarray = "0.16.1"
